home page update

--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "react-scroll-up-button": "^1.6.4",
+    "react-slick": "^0.23.2",
     "react-typing-animation": "^1.5.1",
-    "reactstrap": "^6.5.0"
+    "reactstrap": "^6.5.0",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
