--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1",
+    "react-scripts": "^2.1.5",
     "react-scroll-up-button": "^1.6.4",
     "react-slick": "^0.23.2",
     "react-typing-animation": "^1.5.1",
