--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "bootstrap": "^3.4.0",
-    "react": "^16.7.0",
+    "react": "^16.8.6",
     "react-dom": "^16.7.0",
+    "react-router": "^5.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.5",
     "react-scroll-up-button": "^1.6.4",
