--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "@fortawesome/free-regular-svg-icons": "^5.6.3",
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
     "@fortawesome/react-fontawesome": "^0.1.3",
-    "bootstrap": "^3.4.0",
+    "bootstrap": "^3.4.1",
     "react": "^16.7.0",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-collapsible": "^2.6.0",
     "react-dom": "^16.7.0",
+    "react-particles-js": "^2.7.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.5",
     "react-scroll-up-button": "^1.6.4",
