--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "^2.1.5",
     "react-scroll-up-button": "^1.6.4",
     "react-slick": "^0.23.2",
+    "react-sticky": "^6.0.3",
     "react-typing-animation": "^1.5.1",
     "reactstrap": "^6.5.0",
     "slick-carousel": "^1.8.1"
